# geminni_chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTS.md  Dockerfile  FRESH_START_P8_P12.md  MCP.md  Makefile  P1_P7_PLANNING_PROMPT_EXACT_STRUCTURE.md  P8_P12_PLANNING_PROMPT.md  P8_P12_PLANNING_PROMPT_EXACT_STRUCTURE.md  README.md  add.err  alembic.ini  blueprint.md  docker-compose.yml  dvc.yaml  package-lock.json  package.json  personas.md  prompts.md  pyproject.toml  sample_data.json  sample_data.json.dvc
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ci/: README.md
.github/workflows/: auto-fix.yml  ci.yml  lint.yml  production-deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 20240306_01_initial_schema.py  20240306_02_add_correlation_candidates.py  20240306_03_performance_indexes.py  20250918_04_add_content_hash_to_raw_data.py
config/: schema.json
docs/: AI_UTILIZATION_STRATEGY.md  API_SURFACE.md  BUILD_PLAN.md  CHANGELOG.md  CI_AUTOMATION.md  CODE_QUALITY_FRAMEWORK.md  DB_SCHEMA.sql  DEPLOYMENT.md  ENV.md  EXPERIMENTS_GUIDE.md  IMPORT_EXPORT_RUNBOOK.md  P11_IMPORT_EXPORT_SPEC.md  P6_COMPLETION_SUMMARY.md  P6_IMPLEMENTATION_GUIDE.md  P8_OBSERVABILITY_DESIGN.md  QA_REPORT.md  TEST_MATRIX.md  TODO.md  TROUBLESHOOTING.md  kickoff_prompt_guide.md  observability_runbook.md
frontend/: Dockerfile  README.md  cypress.config.ts  env.example  index.html  jest.config.js  nginx.conf  package.json  temp.eslintrc.cjs  vite.config.ts
frontend/cypress/e2e/: dashboard.cy.ts  search.cy.ts
frontend/cypress/fixtures/: search-results.json
frontend/cypress/support/: commands.ts  component.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts  theme.ts
frontend/src/components/Layout/: Header.tsx  Layout.tsx  NotificationSnackbar.tsx  Sidebar.tsx
frontend/src/components/__tests__/: Layout.test.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DataManagement.tsx  NotFound.tsx  Search.tsx  Settings.tsx
frontend/src/pages/__tests__/: Dashboard.test.tsx
frontend/src/store/: api.ts  index.ts
frontend/src/store/slices/: feedbackSlice.ts  searchSlice.ts  uiSlice.ts
scripts/: kickoff.sh  log_dummy_experiment.py  run_migrations.py  setup.sh  start_build_debug_mcp.sh  start_docker_mcp.sh  start_github_mcp.sh  start_web_debug_mcp.sh  validate_structure.sh
scripts/benchmarks/: run_single_user_benchmark.py
scripts/ci/: update-actions.py
scripts/config/: migrate.py  validate.py
scripts/db/: migrate.py  seed.py
scripts/dvc/: prepare_sample_dataset.py
scripts/health/: check.py
scripts/logs/: tail.py
scripts/test/: local.sh
scripts/worker/: control.py
src/: main.py
src/nexus_knowledge/: __init__.py  experiment_tracking.py  mlflow_utils.py  tasks.py
src/nexus_knowledge/analysis/: __init__.py  model.py  pipeline.py
src/nexus_knowledge/api/: main.py
src/nexus_knowledge/config/: __init__.py  settings.py
src/nexus_knowledge/correlation/: __init__.py  pipeline.py
src/nexus_knowledge/db/: __init__.py  base.py  models.py  repository.py  session.py
src/nexus_knowledge/export/: __init__.py  obsidian.py
src/nexus_knowledge/ingestion/: __init__.py  service.py
src/nexus_knowledge/mcp/: ai_ml_testing_server.py  build_debug_server.py  comprehensive_testing_orchestrator.py  docker_server.py  github_server.py  performance_monitoring_server.py  security_testing_server.py  ux_accessibility_testing_server.py  web_debug_server.py
src/nexus_knowledge/observability/: __init__.py  context.py  health.py  logging.py  metrics.py  middleware.py
src/nexus_knowledge/performance/: __init__.py  benchmarks.py
src/nexus_knowledge/search/: __init__.py  service.py
tests/: conftest.py
tests/analysis/: test_pipeline.py
tests/api/: test_api.py  test_ui.py
tests/config/: test_settings.py
tests/correlation/: test_correlation_pipeline.py
tests/db/: test_indexes.py  test_migrations.py  test_repository.py
tests/dvc/: test_dvc_pipeline.py  test_dvc_setup.py
tests/export/: test_obsidian.py
tests/export/golden/: obsidian_basic.md
tests/ingestion/: test_service.py
tests/mlflow/: test_experiment_tracking.py  test_mlflow_utils.py
tests/performance/: __init__.py  test_benchmarks.py
tests/search/: test_search_service.py
tests/tasks/: test_analysis_tasks.py  test_celery_config.py  test_correlation_tasks.py  test_export_tasks.py  test_persist_feedback.py
