[project]
name = "nexus_knowledge"
version = "0.1.0"
description = "Core Python backend for the NexusKnowledge system."
requires-python = ">=3.11,<3.12"
dependencies = [
    "celery[redis]",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.11.9,<3.0.0",
    "python-dotenv>=1.0.1",
    "mlflow>=2.10.0",
    "dvc[ssh]>=3.48.2",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.5.7",
    "radon>=6.4.0",
    "bandit>=1.8.6",
    "safety>=2.3.2",
    "pre-commit>=3.6.0",
    "black>=24.10.0",
    "mypy>=1.8.0",
    "coverage>=7.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["ANN", "B", "C", "D", "Q", "S", "T", "RET"]
ignore = ["E501"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "A", # flake8-builtins
    "COM", # flake8-commas
    "D", # pydocstyle
    "ERA", # eradicate
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "YTT", # flake8-type-checking
    "EXE", # flake8-executable
    "NPY", # numpy-specific-checks
    "PD", # pandas-vet
    "PERF", # perflint
    "PGH", # pygrep-hooks
    "PL", # pylint
    "RUF", # ruff-specific-rules
    "S", # flake8-bandit
    "T", # flake8-print
    # Removed unsupported selectors: V (variables-names), WPS (wemake)
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D213", # Disable some pydocstyle rules
    "E501", # Line too long, handled by black
]
unfixable = ["T20"] # Don't auto-fix print statements

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # allow asserts in tests
    "ANN",   # relax type annotations in tests
    "PLR2004", # magic values in tests
]
"src/nexus_knowledge/mcp/**" = [
    "S603",  # subprocess calls are expected in MCP servers
    "S607",  # partial executable paths are acceptable for system tools
    "PLR2004", # magic values for HTTP status codes are acceptable
    "C901",  # complex functions are acceptable for debugging tools
    "PERF401", # list comprehensions vs loops are acceptable
    "RET505", # unnecessary else after return is acceptable
    "E722",  # bare except is acceptable for debugging
]
"src/main.py" = ["T201"]  # allow prints for demo CLI
"monitoring/**" = ["T201"]  # allow prints for monitoring CLI tools
"scripts/**" = ["T201"]  # allow prints for script files

[tool.radon]
exclude = ["tests/*", "venv/*", ".venv/*", "build/*", "dist/*"]
min = "B"
max = "A"
no_assert = true
show_complexity = true
show_closures = true
order = "SCORE"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
